--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300,700);
+.bg-gray {
+  background-color: #D5D5D5; }
+
+.sep {
+  content: "|"; }
 
 /*# sourceMappingURL=main.css.map */
