pagina contactos, terminada, opciones funcionando, footer listo, se modifica variables de colores, y el global, para que funcione con las demas paginas

--- a/css/Sass/pages/_contacto.scss
+++ b/css/Sass/pages/_contacto.scss
@@ -1,6 +1,25 @@
-.bg-gray{
-	background-color: $gray;
+.contacto{
+	text-align: center;
+	font-weight: bold;
 }
-.sep{
-	content: "|"
+.example{
+	text-align: right;
 }
+form{
+	margin: 5% 13%;
+}
+.forml{
+	text-align: justify;
+	margin: 2%;
+}
+.btnimg{
+margin-left:30%;
+}
+/* - - - G L O B A L - - - */
+.mt-5{
+	margin-top: 5%;
+}
+.mt-3{
+	margin-top: 3%;
+}
+/* - - - G L O B A L - - - */
