--- a/css/Sass/helpers/_variables.scss
+++ b/css/Sass/helpers/_variables.scss
@@ -1,1 +1,6 @@
-$gray:#D5D5D5;
+/* - - - V A R I A B L E S - F O O T E R - - - */
+$gray:#E6E4E1;
+$darkgray:#8B8883;
+$lightgray:#928F8A;
+$black:#343535;
+/* - - - V A R I A B L E S - F O O T E R - - - */
