blog diagramacion lista, falta detalles, de alineacion y espaciado

--- a/css/Sass/helpers/_variables.scss
+++ b/css/Sass/helpers/_variables.scss
@@ -4,3 +4,4 @@ $darkgray:#8B8883;
 $lightgray:#928F8A;
 $black:#343535;
 /* - - - V A R I A B L E S - F O O T E R - - - */
+$borde:1px solid $lightgray;
