--- a/css/Sass/helpers/_variables.scss
+++ b/css/Sass/helpers/_variables.scss
@@ -4,4 +4,9 @@ $darkgray:#8B8883;
 $lightgray:#928F8A;
 $black:#343535;
 /* - - - V A R I A B L E S - F O O T E R - - - */
+
+/* - - - V A R I A B L E S - B L O G - - - */
 $borde:1px solid $lightgray;
+/* - - - V A R I A B L E S - B L O G - - - */
+/* - - - V A R I A B L E S - I N D E X - - - */
+$white:#FFF;
