Index listo - right column

--- a/css/Sass/main.scss
+++ b/css/Sass/main.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300,700);
+@import url(https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300,700);
 @import "helpers/_variables.scss";
 @import "helpers/_mixins.scss";
 @import "base/_global.scss";
