--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,287 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300,700);
+@import url(https://fonts.googleapis.com/css?family=Lato|Open+Sans+Condensed:300,700);
+* {
+  font-family: "Lato"; }
+
+a {
+  text-decoration: none; }
+
+img {
+  width: 100%; }
+
+.row {
+  padding: 5px 0px; }
+
+.center {
+  text-align: center; }
+
+.header, .header .logo {
+  margin-top: 10px; }
+
+i {
+  margin-left: 5px; }
+  i.fa-facebook {
+    color: #2A65A1; }
+  i.fa-twitter {
+    color: #4BB7D9; }
+  i.fa-google-plus {
+    color: #BA1414; }
+  i.fa-envelope {
+    color: #FFBF00; }
+  i.fa-rss {
+    color: #FF8000; }
+
+.ad {
+  background: #F4F5F7; }
+  .ad a, .ad button {
+    font-size: 11px; }
+  .ad button {
+    border-radius: 5px;
+    padding: 0px 5px;
+    background: #DD4A4A;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    border: none;
+    font-weight: bold; }
+    .ad button:hover {
+      background: #cd2727;
+      color: #FFFFFF; }
+
+nav ul {
+  width: 100%;
+  background: #BA1414;
+  border-radius: 5px;
+  margin-left: 0px !important; }
+  nav ul li {
+    padding: 5px 0px;
+    border-right: 1px solid #F4F5F7; }
+    nav ul li:nth-child(10) {
+      border: none; }
+  nav ul a {
+    font-family: "Open Sans Condensed";
+    color: #FFFFFF;
+    margin: 0px 11px; }
+    nav ul a:hover {
+      color: #FFFFFF;
+      font-weight: bold; }
+
+.small {
+  font-size: 13px; }
+
+.xsmall {
+  font-size: 11px; }
+
+.floatRight {
+  float: right; }
+
+.floatLeft {
+  float: left; }
+
+.fa-circle {
+  font-size: 5px;
+  color: #768696;
+  margin: 0 20px;
+  vertical-align: middle; }
+
+.temas {
+  font-family: "Open Sans Condensed";
+  background: #E4E7EA;
+  border-radius: 5px;
+  padding: 5px 10px; }
+  .temas:before, .temas:after {
+    content: " ";
+    display: block;
+    clear: both; }
+  .temas p {
+    width: 15%;
+    margin-bottom: 0px; }
+  .temas .multiple-items {
+    vertical-align: middle;
+    width: 85%; }
+    .temas .multiple-items.slick-slider {
+      margin-bottom: 0px; }
+
+.officialContent .fa-facebook {
+  width: 25px;
+  border-radius: 5px;
+  border-bottom: 2px solid #2A65A1;
+  background: #E4E7EA;
+  padding: 5px; }
+.officialContent .fa-twitter {
+  width: 25px;
+  border-radius: 5px;
+  border-bottom: 2px solid #4BB7D9;
+  background: #E4E7EA;
+  padding: 5px; }
+.officialContent .fa-google-plus {
+  width: 25px;
+  border-radius: 5px;
+  border-bottom: 2px solid #BA1414;
+  background: #E4E7EA;
+  padding: 5px; }
+.officialContent .fa-youtube-play {
+  color: #BA1414; }
+.officialContent .fa-camera {
+  color: #BA1414; }
+
+.titularUno {
+  background: url(../image/img_grid_principal.jpg);
+  background-size: cover;
+  background-position: center center;
+  color: #FFFFFF; }
+  .titularUno div {
+    padding: 0 20px 10px 20px;
+    padding-top: 75%;
+    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.65) 100%); }
+    .titularUno div h2, .titularUno div h3, .titularUno div p {
+      text-shadow: 2px 2px #000000;
+      font-weight: bold; }
+
+.titularDos {
+  background: url(../image/img_grid_secundario.jpg);
+  background-size: cover;
+  background-position: center center;
+  color: #FFFFFF;
+  margin-bottom: 20px; }
+  .titularDos div {
+    padding: 0 20px 10px 20px;
+    padding-top: 25%;
+    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.65) 100%); }
+    .titularDos div h2, .titularDos div h3, .titularDos div p {
+      text-shadow: 2px 2px #000000;
+      font-weight: bold; }
+
+.titularTres {
+  background: url(../image/fotogaleria_col01_01.jpg);
+  background-size: cover;
+  background-position: center center;
+  color: #FFFFFF;
+  margin-top: 20px; }
+  .titularTres div {
+    padding: 0 20px 10px 20px;
+    padding-top: 25%;
+    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.65) 100%); }
+    .titularTres div h2, .titularTres div h3, .titularTres div p {
+      text-shadow: 2px 2px #000000;
+      font-weight: bold; }
+
+.contenedorSlider {
+  background: #F4F5F7;
+  border-top: 4px solid #BA1414;
+  padding-bottom: 15px; }
+  .contenedorSlider img {
+    margin: 0 auto;
+    height: 80px;
+    width: 80px;
+    border: 3px solid #FFFFFF;
+    -webkit-box-shadow: 0px 3px 2px -1px rgba(0, 0, 0, 0.54);
+    -moz-box-shadow: 0px 3px 2px -1px rgba(0, 0, 0, 0.54);
+    box-shadow: 0px 3px 2px -1px rgba(0, 0, 0, 0.54); }
+  .contenedorSlider div {
+    padding: 10px 10px 0px 10px;
+    text-align: center; }
+
+.boxsetUno > div {
+  background: url(../image/img_especiales.jpg);
+  background-size: cover;
+  background-position: center center;
+  color: #FFFFFF; }
+  .boxsetUno > div div {
+    padding: 0 10px 5px 10px;
+    padding-top: 45%;
+    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.65) 100%); }
+    .boxsetUno > div div h2, .boxsetUno > div div h3, .boxsetUno > div div p {
+      text-shadow: 2px 2px #000000;
+      font-weight: bold; }
+
+.boxsetDos > div {
+  background: url(../image/img_especiales_aside.jpg);
+  background-size: cover;
+  background-position: center center;
+  color: #FFFFFF; }
+  .boxsetDos > div div {
+    padding: 0 10px 5px 10px;
+    padding-top: 38.5%;
+    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.65) 100%); }
+    .boxsetDos > div div h2, .boxsetDos > div div h3, .boxsetDos > div div p {
+      text-shadow: 2px 2px #000000;
+      font-weight: bold; }
+
+.boxsetTres > div {
+  background: url(../image/img_infografia_especiales.jpg);
+  background-size: cover;
+  background-position: center center;
+  color: #FFFFFF; }
+  .boxsetTres > div div {
+    padding: 0 10px 5px 10px;
+    padding-top: 45%;
+    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.65) 100%); }
+    .boxsetTres > div div h2, .boxsetTres > div div h3, .boxsetTres > div div p {
+      text-shadow: 2px 2px #000000;
+      font-weight: bold; }
+
+.boxsetCuatro > div {
+  background: url(../image/img_video_destacado.jpg);
+  background-size: cover;
+  background-position: center center;
+  color: #FFFFFF; }
+  .boxsetCuatro > div div {
+    padding: 0 10px 5px 10px;
+    padding-top: 38.5%;
+    background: linear-gradient(to bottom, transparent 0%, rgba(0, 0, 0, 0.65) 100%); }
+    .boxsetCuatro > div div h2, .boxsetCuatro > div div h3, .boxsetCuatro > div div p {
+      text-shadow: 2px 2px #000000;
+      font-weight: bold; }
+
+.boxsetUno, .boxsetDos, .boxsetTres, .boxsetCuatro {
+  border: 1px solid #E4E7EA;
+  margin-top: 10px;
+  margin-bottom: 30px; }
+  .boxsetUno > p, .boxsetDos > p, .boxsetTres > p, .boxsetCuatro > p {
+    margin: 10px 0px; }
+    .boxsetUno > p:first-child, .boxsetDos > p:first-child, .boxsetTres > p:first-child, .boxsetCuatro > p:first-child {
+      color: #BA1414;
+      font-weight: bold; }
+  .boxsetUno a, .boxsetDos a, .boxsetTres a, .boxsetCuatro a {
+    color: black; }
+
+.contentWide > h4 {
+  font-family: "Open Sans Condensed";
+  margin-top: 0px;
+  margin-right: 20px;
+  font-weight: bold;
+  color: #768696; }
+.contentWide > img {
+  margin-top: 5px;
+  width: 15px;
+  height: 15px; }
+.contentWide div {
+  position: relative;
+  padding: 20px 0px;
+  border-bottom: 1px solid #768696; }
+  .contentWide div .glyphicon {
+    color: #768696;
+    vertical-align: text-top; }
+  .contentWide div p:nth-child(4) {
+    font-size: 15px; }
+  .contentWide div:before, .contentWide div:after {
+    content: " ";
+    clear: both;
+    display: block; }
+  .contentWide div img {
+    margin-right: 30px;
+    width: 200px;
+    height: 120px; }
+  .contentWide div h4 {
+    margin-top: 0px;
+    font-weight: bold; }
+  .contentWide div .bottomList {
+    position: absolute;
+    left: 225px;
+    bottom: 10px; }
+    .contentWide div .bottomList p {
+      text-transform: uppercase;
+      font-size: 12px; }
+
+/*te amo mucho polola*/
 
 /*# sourceMappingURL=main.css.map */
