se arregla enlace de bootstrap y se arregla menu en blog, contacto, e index

--- a/css/Sass/pages/_index.scss
+++ b/css/Sass/pages/_index.scss
@@ -123,8 +123,12 @@
  	position: absolute;
  	top: 20;
  	left: 100px;
+ 	width: initial;
 }
 .btn{
  	width: 100%;
+ }
+ .img-sidebar{
+ 	width: initial;
  }
 /* - - - S I D E B A R - I N D E X - - - */
