--- a/css/Sass/pages/_index.scss
+++ b/css/Sass/pages/_index.scss
@@ -105,30 +105,77 @@
 	}
 }
 /* - - - S I D E B A R - I N D E X - - - */
- .bg-sidebar{
- 	background-image: url(../../../image/archive-sidebar-bg.jpg);
- 	background-repeat: repeat;
- 	background-size: cover;
- 	position: relative;
- 	height: 200px;
- }
- .bg-white{
- 	background-color: $white;
- 	margin: 5%;
- 	position: absolute;
- 	top: 30px;
- 	left: 30px;
- }
-.mail{
- 	position: absolute;
- 	top: 20;
- 	left: 100px;
- 	width: initial;
+.bg-sidebar {
+    background-image: url("../image/archive-sidebar-bg.jpg");
+    background-repeat: repeat;
+    position: relative;
+    height: 265px;
+    border: 1px solid black;
+}
+.bg-white {
+    background-color: #FFFFFF;
+    margin: 5%;
+    text-align: center;
+    padding: 8%;
+    position: absolute;
+    top: 10%;
+    border: 1px solid black;
+}
+.mail {
+    position: absolute;
+    top: -30px;
+    left: 105px;
+    width: initial;
 }
 .btn{
  	width: 100%;
  }
  .img-sidebar{
  	width: initial;
+ 	margin-right: 5%
  }
+ input{
+ 	margin: 2% 0;
+ 	width: 100%;
+ }
+ .btn-suscribe{
+ 	background-color: $red;
+	color: white;
+ 	font-weight: bold;
+ 	width: 100%;
+ 	padding: 3%;
+ 	border-radius: 10px;
+ }
+ .noticia{
+	margin: 10% 0;
+}
+ .aweita {
+    border: solid 2px #E6E4E1;
+    margin: 5% 0;
+    padding: 0 5% 5% 5%;
+    display: inline-block;
+}
+.logoaweita{
+	margin:5% 25% 0 25%;
+}
+.link-aweita{
+	color: $purple;
+}
+.barra {
+    border: 5px solid #952B7A;
+    width: 94px;
+    background-color: #952B7A;
+    position: absolute;
+    bottom: -1px;
+    left: 35%;
+}
+.center{
+	text-align: center;
+}
+.sep:after{
+	content: "|";
+	padding-left: 10px;
+	padding-right: 10px;
+	margin: auto;
+}
 /* - - - S I D E B A R - I N D E X - - - */
