--- a/css/Sass/helpers/_mixins.scss
+++ b/css/Sass/helpers/_mixins.scss
@@ -52,4 +52,11 @@
 	}
 
 }
-
+@mixin imgColumnista($h,$w){
+	height:$h;
+	width:$w;
+	border:3px solid $white;
+	-webkit-box-shadow: 0px 3px 2px -1px rgba(0,0,0,0.54);
+	-moz-box-shadow: 0px 3px 2px -1px rgba(0,0,0,0.54);
+	box-shadow: 0px 3px 2px -1px rgba(0,0,0,0.54);
+}
