--- a/css/Sass/pages/_index.scss
+++ b/css/Sass/pages/_index.scss
@@ -10,18 +10,12 @@
 	background:$grey;
 	border-top:4px solid $red;
 	padding-bottom:15px;
-	img{
+	img{@include imgColumnista(80px,80px);
 		margin:0 auto;
-		height:80px;
-		width:80px;
-		border:3px solid $white;
-		-webkit-box-shadow: 0px 3px 2px -1px rgba(0,0,0,0.54);
-		-moz-box-shadow: 0px 3px 2px -1px rgba(0,0,0,0.54);
-		box-shadow: 0px 3px 2px -1px rgba(0,0,0,0.54);
 	}
 	div{
 		padding:10px 10px 0px 10px;
-		text-align:center
+		text-align:center;
 	}
 }
 .boxsetUno{
@@ -55,53 +49,12 @@
 		color:black;
 	}
 }
-.contentWide{
-	>h4{
-		font-family:"Open Sans Condensed";
-		margin-top:0px;
-		margin-right:20px;
-		font-weight:bold;
-		color:$darkGrey;
-	}
-	>img{
-		margin-top:5px;
-		width:15px;
-		height:15px;
-	}
-	div{
-		position:relative;
-		padding:20px 0px;
-		border-bottom:1px solid $darkGrey;
-		.glyphicon{
-			color:$darkGrey;
-			vertical-align:text-top;
-		}
-		p:nth-child(4){
-			font-size:15px;
-		}
-		&:before,&:after{
-			content:" ";
-			clear:both;
-			display:block;
-		}
-		img{
-			margin-right:30px;
-			width:200px;
-			height:120px;
-		}
-		h4{
-			margin-top:0px;
-			font-weight:bold;
-		}
-		.bottomList{
-			position:absolute;
-			left:225px;
-			bottom:10px;;
-			p{
-				text-transform:uppercase;
-				font-size:12px;
-			}
+.news{
+	.contentWide{
+		>div{
+			padding:20px 0px;
 		}
 	}
 }
+
 /*te amo mucho polola*/
