--- a/css/Sass/base/_global.scss
+++ b/css/Sass/base/_global.scss
@@ -17,7 +17,6 @@ img{
 	margin-top:10px;
 }
 i{
-	margin-left:5px;
 	&.fa-facebook{
 		color:$blue;
 	}
@@ -36,11 +35,31 @@ i{
 }
 .ad{
 	background:$grey;
+	.floatRight{
+		*{
+			margin-left:10px;
+		}
+		div{
+		color:$darkGrey;
+		padding:5px 10px;
+		margin-left:10px;
+		display:inline;
+		border-left:1px solid $buttonGrey;
+		border-right:1px solid $buttonGrey;
 
+			input{
+				width:60px;
+				background:$grey;
+				border:none;
+				color:$darkGrey;
+			}
+		}
+	}
 	a,button{
 		font-size:11px;
 	}
-	button{@include button($lightRed,0px,5px);
+	button{@include button($lightRed,2px,5px);
+		vertical-align:middle;
 	}
 }
 nav{
@@ -51,7 +70,8 @@ nav{
 		margin-left:0px!important;
 		li{
 			padding:5px 0px;
-			border-right:1px solid $grey;
+			border-right:2px solid transparent;
+			border-image: url(../image/main_menu_sep.jpg) 10 round;
 			&:nth-child(10){
 				border:none;
 			}
@@ -59,7 +79,7 @@ nav{
 		a{	
 			font-family:"Open Sans Condensed";
 			color:$white;
-			margin:0px 11px;
+			margin:0px 10px;
 			&:hover{
 				color:$white;
 				font-weight:bold;
@@ -85,16 +105,11 @@ nav{
 	margin:0 20px;
 	vertical-align:middle;
 }
-.temas{
+.temas{@include repisa();
 	font-family:"Open Sans Condensed";
 	background:$buttonGrey;
 	border-radius:5px;
 	padding:5px 10px;
-	&:before,&:after{
-		content:" ";
-		display:block;
-		clear:both;
-	}
 	p{
 		width:15%;
 		margin-bottom:0px;
@@ -108,35 +123,36 @@ nav{
 		}
 	}
 }
-.officialContent{
-	.fa-facebook{@include contentButton($blue);
+i:first-child{
+	&.fa-facebook{@include contentButton($blue);
 	}
-	.fa-twitter{@include contentButton($lightBlue);
+	&.fa-twitter{@include contentButton($lightBlue);
 	}
-	.fa-google-plus{@include contentButton($red);
-	}
-	.fa-youtube-play{
-		color:$red;
-	}
-	.fa-camera{
-		color:$red;
+	&.fa-google-plus{@include contentButton($red);
 	}
 }
 
-.contentWide{
-	>h4{
-		font-family:"Open Sans Condensed";
-		margin-top:0px;
-		margin-right:20px;
-		font-weight:bold;
-		color:$darkGrey;
-	}
-	>img{
+.fa-youtube-play{
+	color:$red;
+}
+.fa-camera{
+	color:$red;
+}
+
+h4.floatLeft {
+	font-family:"Open Sans Condensed";
+	margin-top:0px;
+	margin-right:20px;
+	font-weight:bold;
+	color:$darkGrey;
+}
+img.floatLeft{
 		margin-top:5px;
 		width:15px;
 		height:15px;
-	}
-	>div{
+}
+.contentWide{
+	>div{@include repisa();
 		position:relative;
 		border-bottom:1px solid $darkGrey;
 		.glyphicon{
@@ -145,11 +161,6 @@ nav{
 		}
 		p:nth-child(4){
 			font-size:15px;
-		}
-		&:before,&:after{
-			content:" ";
-			clear:both;
-			display:block;
 		}
 		img{
 			margin-right:30px;
@@ -162,7 +173,7 @@ nav{
 		}
 		.bottomList{
 			position:absolute;
-			left:225px;
+			left:230px;
 			bottom:10px;;
 			p{
 				text-transform:uppercase;
