--- a/css/Sass/pages/_index.scss
+++ b/css/Sass/pages/_index.scss
@@ -166,16 +166,30 @@
     width: 94px;
     background-color: #952B7A;
     position: absolute;
-    bottom: -1px;
+    bottom: -1px;/*23%*/
     left: 35%;
-}
-.center{
-	text-align: center;
 }
 .sep:after{
 	content: "|";
 	padding-left: 10px;
 	padding-right: 10px;
 	margin: auto;
+}
+.fotos-dest{
+	position: relative;
+	border-top: 5px solid $gris;
+}
+.titlephots{
+	color: $white;
+	background-color: $gris;
+	position: absolute;
+	top: -10px;
+	left: 25%;
+}
+.big{
+	margin: 11% 2% 5% 2%;
+}
+.photo{
+	border: 2px solid $gris;
 }
 /* - - - S I D E B A R - I N D E X - - - */
