cambios en sidebar terminados

--- a/css/Sass/helpers/_variables.scss
+++ b/css/Sass/helpers/_variables.scss
@@ -3,7 +3,6 @@ $darkgray:#8B8883;
 $lightgray:#928F8A;
 $black:#343535;
 $borde:1px solid $lightgray;
-$white:#FFF;
 $grey:#F4F5F7;
 $buttonGrey:#E4E7EA;
 $darkGrey:#768696;
@@ -16,3 +15,10 @@ $yellow:#FFBF00;
 $orange:#FF8000;
 $purple:#952B7A;
 $gris:#70848E;
+$whitetrans: rgba(255, 255, 255, 0.9);
+$red:#CA0000;
+$darkred:#7C0606;
+$redlight:#FF9D98;
+$greenlight:#C6F4A2;
+$yellow:#FFE950;
+$pink:#EA0061;
