--- a/css/Sass/pages/_columnistas.scss
+++ b/css/Sass/pages/_columnistas.scss
@@ -38,7 +38,7 @@ h1{
 		}
 		.small{
 			font-family:"Open Sans Condensed";
-			color:#000000;
+			color:$black;
 		}
 	}
 }
@@ -80,7 +80,7 @@ h1{
 		}
 		.small{
 			font-family:"Open Sans Condensed";
-			color:#000000;
+			color:$black;
 		}
 	}
 }
